--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,11 +13,8 @@ phases:
       - echo "Renaming WAR file for consistency"
       - mv target/myapp.war myapp.war
 
-  post_build:
-    commands:
-      - echo "Copying WAR file to S3 bucket"
-      - aws s3 cp myapp.war s3://codepipeline-ap-south-1-595684731156/myapp.war
-
 artifacts:
   files:
     - myapp.war
+  name: myapp.war
+  discard-paths: yes
